<resources>
    <string name="app_name">AnimeInfo2</string>
    <string name="naruto">Naruto</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="rating">4,9</string>
    <string name="type">Adventure</string>
    <string name="percentage">98%</string>
    <string name="familliarity">Similar</string>
    <string name="description">\"Naruto Shippuden\" adalah sebuah anime epik yang mengikuti petualangan seorang ninja muda bernama Naruto Uzumaki saat ia kembali ke desa ninja Konoha setelah pelatihan intensif dengan guru legendaris, Jiraiya. Dengan tekad kuat untuk menjadi Hokage, pemimpin tertinggi desa, Naruto berusaha untuk melindungi teman-temannya dan menghadapi ancaman yang semakin besar.\n\nDalam perjalanan panjangnya, Naruto menghadapi berbagai musuh kuat, termasuk organisasi jahat bernama Akatsuki, yang berusaha untuk menangkap para Jinchuriki, individu yang memiliki monster dalam diri mereka seperti Naruto. Sementara itu, saingan dan teman lama Naruto, Sasuke Uchiha, terlibat dalam pencarian kekuatan untuk membalas dendam pada desa Konoha.\n\nDengan pertarungan epik yang dipenuhi dengan teknik ninja yang spektakuler, \"Naruto Shippuden\" juga menyoroti pertumbuhan karakter yang mendalam, persahabatan yang kuat, dan pengorbanan yang mengharukan. Dengan penggemar di seluruh dunia, anime ini menawarkan pengalaman yang mendebarkan dan memikat bagi para penontonnya. Jadi, apakah kamu siap untuk memulai petualangan ninja yang menakjubkan dengan Naruto dan teman-temannya?</string>
</resources>